--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,21 @@ spring:
     resources:
         static-locations: 
           - classpath:/frontend/build
-server:
-  port: 8080
+  datasource:
+      url: ${DB_URL}
+      username: ${DB_USERNAME}
+      password: ${DB_PASSWORD}                              
 
-        
+  jpa:
+      database-platform: org.hibernate.dialect.H2Dialect      
+      defer-datasource-initialization: true                   
+      hibernate:
+        ddl-auto: none
+      properties:
+        hibernate:
+          dialect: org.hibernate.dialect.PostgreSQLDialect
+
+server:
+  port: ${PROGRAM_PORT} 
+
+  
