--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,9 @@ spring:
       properties:
         hibernate:
           dialect: org.hibernate.dialect.PostgreSQLDialect
+  devtools:
+    restart:
+      exclude: frontend/**
 
 server:
   port: ${PROGRAM_PORT} 
